--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,11 @@ p {
   padding: 0;
 }
 
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 /* Logo */
 
 .header-logo-first {
@@ -103,7 +108,6 @@ p {
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
-  margin-bottom: 94px;
 }
 
 .hero-title {
@@ -139,10 +143,6 @@ p {
 
 /* Feature */
 
-.feature {
-  margin-bottom: 94px;
-}
-
 .feature-list .title {
   color: var(--title-text-color);
   font-weight: 700;
@@ -160,10 +160,6 @@ p {
 
 /* Work */
 
-.work {
-  margin-bottom: 94px;
-}
-
 .work-title {
   color: var(--title-text-color);
   font-weight: 700;
@@ -177,8 +173,6 @@ p {
 
 .team {
   background-color: var(--team-title-bg-color);
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 
 .team-picture {
