--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@
   --team-title-bg-color: #f5f4fa;
   --button-hover-color: #188ce8;
   --button-secondary-color: #f5f4fa;
+  --border-bg: #eeeeee;
+  --header-border-bg: #ececec;
 }
 
 body {
@@ -41,12 +43,16 @@ p {
   padding: 0;
 }
 
+img {
+  display: block;
+}
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-/* Logo */
+/* -----------Logo---------- */
 
 .header-logo-first {
   color: var(--accent-color);
@@ -61,11 +67,15 @@ p {
   color: var(--tertiary-title-text-color);
 }
 
-/* Navigation */
+/* ---------Navigation-------- */
 
 .main-nav {
   display: flex;
   align-items: center;
+}
+
+header {
+  border-bottom: 1px solid var(--header-border-bg);
 }
 
 header .container {
@@ -132,7 +142,7 @@ header .container {
   /* outline: 2px solid tomato; */
 }
 
-/* Hero */
+/* -------Hero-------- */
 
 .hero {
   background-color: var(--title-bg-color);
@@ -151,7 +161,7 @@ header .container {
   margin-bottom: 30px;
 }
 
-/* Button */
+/* --------Button------- */
 
 .button {
   color: var(--secondary-title-text-color);
@@ -172,7 +182,7 @@ header .container {
   background-color: var(--button-hover-color);
 }
 
-/* Feature */
+/* --------Feature--------- */
 
 .feature-list {
   display: flex;
@@ -197,7 +207,7 @@ header .container {
   line-height: 1.7;
 }
 
-/* Work */
+/* --------Work--------- */
 
 .work-section {
   padding-top: 0;
@@ -265,7 +275,7 @@ header .container {
   text-align: center;
 }
 
-/* Footer */
+/* -------Footer-------- */
 
 footer {
   background-color: var(--title-bg-color);
@@ -294,10 +304,6 @@ footer {
   line-height: 1.7;
 }
 
-.footer-address li {
-  margin-bottom: 9px;
-}
-
 .footer-address .link {
   color: var(--footer-title-text-color);
   font-weight: 400;
@@ -310,11 +316,21 @@ footer {
   color: var(--accent-color);
 }
 
-/* Portfolio */
+/* ------Portfolio filter ------*/
 
 .filter {
   padding-top: 52px;
   padding-bottom: 136px;
+}
+
+.filter-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.filter-list .item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .filter-button {
@@ -341,8 +357,30 @@ footer {
   background-color: var(--button-hover-color);
 }
 
-.project-list .project-picture {
-  margin-bottom: 20px;
+/* ------Portfolio project------ */
+
+.project-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.project-list .item {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.project-list .item:nth-child(3n) {
+  margin-right: 0;
+}
+.project-list .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.project-list .project-info-block {
+  border: 1px solid var(--border-bg);
+  border-top-color: transparent;
+  padding: 20px 24px;
 }
 
 .project-list .name {
@@ -359,10 +397,4 @@ footer {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.9;
-  margin-bottom: 20px;
-}
-
-.filter .list {
-  /* margin-top: 52px; */
-  margin-bottom: 50px;
 }
