--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,8 @@ header .container {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .auth-nav .link:hover,
@@ -244,6 +246,12 @@ header .container {
   margin-right: 30px;
 }
 
+.team-list .item {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
 .team-list .info-block {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -273,6 +281,7 @@ header .container {
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
+  color: var(--primary-text-color);
 }
 
 /* -------Footer-------- */
@@ -317,11 +326,6 @@ footer {
 }
 
 /* ------Portfolio filter ------*/
-
-.filter {
-  padding-top: 52px;
-  padding-bottom: 136px;
-}
 
 .filter-list {
   display: flex;
